# JonssonicDSP

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README_8md.html  __common_8h.html  __common_8h_source.html  __core_8h.html  __core_8h_source.html  __effects_8h.html  __effects_8h_source.html  __mixing_8h.html  __mixing_8h_source.html  __models_8h.html  __models_8h_source.html  __oversampling_8h.html  __oversampling_8h_source.html  __reverb_8h.html  __reverb_8h_source.html  __saturation_8h.html  __saturation_8h_source.html  __utils_8h.html  __utils_8h_source.html  allpass__filter_8h.html  allpass__filter_8h.js  allpass__filter_8h_source.html  annotated.html  annotated_dup.js  audio__buffer_8h.html  audio__buffer_8h.js  audio__buffer_8h_source.html  biquad__chain_8h.html  biquad__chain_8h.js  biquad__chain_8h_source.html  biquad__filter_8h.html  biquad__filter_8h.js  biquad__filter_8h_source.html  buffer__utils_8h.html  buffer__utils_8h.js  (+541 more)
.github/workflows/: docs.yml  release.yaml
cmake/: JonssonicDSPConfig.cmake.in
docs/: GUIDELINES.md
include/Jonssonic/: jonssonic_config.h  jonssonic_config.h.in
include/Jonssonic/core/: DSPProcessor.h  DelayLine.h  Interpolators.h  MultiChannelBuffer.h  _core.h
include/Jonssonic/core/common/: AudioBuffer.h  CircularAudioBuffer.h  CircularBuffer.h  DspParam.h  Interpolators.h  Modulation.h  MultiChannelBuffer.h  OverSampler.h  SmoothedValue.h  _common.h  audio_buffer.h  circular_audio_buffer.h  dsp_param.h  quantities.h  smoothed_value.h
include/Jonssonic/core/delay/: DelayLine.h
include/Jonssonic/core/delays/: AllpassFilter.h  CombFilter.h  DelayLine.h  _delays.h  allpass_filter.h  comb_filter.h  delay_line.h
include/Jonssonic/core/dynamics/: EnvelopeFollower.h  GainComputer.h  GainSmoother.h  _dynamics.h  envelope_follower.h  gain_computer.h  gain_smoother.h
include/Jonssonic/core/filters/: BiquadChain.h  BiquadCoeffs.h  BiquadCore.h  BiquadFilter.h  DampingFilter.h  FilterTypes.h  FirstOrderCoeffs.h  FirstOrderCore.h  FirstOrderFilter.h  SOSFilter.h  UtilityFilters.h  _filters.h  biquad_chain.h  biquad_filter.h  damping_filter.h  filter_types.h  first_order_filter.h  utility_filters.h
include/Jonssonic/core/generators/: FilteredNoise.h  Noise.h  Oscillator.h  _generators.h  filtered_noise.h
include/Jonssonic/core/mixing/: Crossfader.h  DryWetMixer.h  MixingMatrix.h  _mixing.h  dry_wet_mixer.h  mixing_matrix.h
include/Jonssonic/core/nonlinear/: DistortionStage.h  WaveShaper.h  WaveShaperProcessor.h  _nonlinear  wave_shaper.h  wave_shaper_processor.h
include/Jonssonic/core/oversampling/: OverSampler.h  OverSamplerFilters.h  _oversampling.h  oversampled_processor.h
include/Jonssonic/effects/: Compressor.h  Delay.h  Distortion.h  Equalizer.h  Flanger.h  Reverb.h  _effects.h
include/Jonssonic/models/delays/: modulated_delay_stage.h
include/Jonssonic/models/dynamics/: detector.h  dynamics_processor.h  gain_control_stage.h
include/Jonssonic/models/saturation/: saturation_stage.h
include/Jonssonic/utils/: BufferUtils.h  JuceIntegration.h  MathUtils.h  _utils.h  buffer_utils.h  math_utils.h
include/Jonssonic/utils/detail/: config_utils.h
include/jonssonic/: jonssonic_config.h  jonssonic_config.h.in
include/jonssonic/core/common/: _common.h  audio_buffer.h  circular_audio_buffer.h  dsp_param.h  modulation.h  quantities.h  tpt_integrator.h
include/jonssonic/core/delays/: allpass_filter.h  comb_filter.h  delay_line.h  multi_tap_delay_line.h
include/jonssonic/core/filters/: _filters.h  biquad_chain.h  biquad_filter.h  damping_filter.h  filter.h  filter_topologies.h  first_order_filter.h  one_pole_filter.h  routing.h  state_variable_filter.h
include/jonssonic/core/generators/: _generators.h  oscillator.h
include/jonssonic/core/mixing/: mixing_matrix.h
include/jonssonic/core/nonlinear/: wave_shaper.h
include/jonssonic/core/oversampling/: oversampled_processor.h  (+1 more)
include/jonssonic/effects/: Compressor.h  Distortion.h  _effects.h  chorus.h  delay.h  distortion.h  equalizer.h  flanger.h  reverb.h
include/jonssonic/models/: _models.h
include/jonssonic/utils/: buffer_utils.h  math_utils.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+91 more)
tests/: CMakeLists.txt
tests/core/: test_DelayLine.cpp  test_Interpolators.cpp
tests/core/common/: test_CircularAudioBuffer.cpp  test_CircularBuffer.cpp  test_DspParam.cpp  test_Interpolators.cpp  test_SmoothedValue.cpp  test_audio_buffer.cpp  test_circular_audio_buffer.cpp  test_dsp_param.cpp  test_smoothed_value.cpp
tests/core/delay/: test_AllpassFilter.cpp  test_CombFilter.cpp  test_DelayLine.cpp  test_allpass_filter.cpp  test_comb_filter.cpp  test_delay_line.cpp  test_multi_tap_delay_line.cpp
tests/core/dynamics/: test_GainComputer.cpp  test_GainSmoother.cpp  test_envelope_follower.cpp  test_gain_computer.cpp  test_gain_smoother.cpp
tests/core/filters/: test_BiquadCore.cpp  test_BiquadFilter.cpp  test_FirstOrderCore.cpp  test_SOSFilter.cpp  test_biquad_chain.cpp  test_biquad_core.cpp  test_biquad_filter.cpp  test_filter.cpp  test_first_order_core.cpp  test_one_pole_filter.cpp  test_state_variable_filter.cpp
tests/core/generators/: test_Oscillator.cpp
tests/core/mixing/: test_mixing_matrix.cpp
tests/core/nonlinear/: test_DistortionStage.cpp  test_WaveShaper.cpp  test_wave_shaper.cpp  test_wave_shaper_processor.cpp
tests/core/oversampling/: test_OverSampler.cpp  test_OverSamplerFilters.cpp  test_oversampler_filters.cpp
tests/effects/: test_Delay.cpp  test_Flanger.cpp  test_Reverb.cpp  test_chorus.cpp  test_compressor.cpp  test_delay.cpp  test_distortion.cpp  test_equalizer.cpp  test_flanger.cpp  test_reverb.cpp
(+45 files in other folders)
